config/default/metrics_cert_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  template:
    spec:
      containers:
        - name: manager
          args:
            - --metrics-cert-path=/tmp/k8s-metrics-server/metrics-certs
          volumeMounts:
            - name: metrics-certs
              mountPath: /tmp/k8s-metrics-server/metrics-certs
              readOnly: true
      volumes:
        - name: metrics-certs
          secret:
            secretName: metrics-server-cert
            optional: false
